--- a/src/Components/Pages/About/About/AboutHero.module.css
+++ b/src/Components/Pages/About/About/AboutHero.module.css
@@ -1,6 +1,6 @@
 .aboutHeroContainer {
   width: 100%;
-  background-image: url(../../../../Images//aboutUs.jpg);
+  background-image: url(../../../../images/aboutUs.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
