--- a/src/Components/Pages/Home/Hero/Hero.module.css
+++ b/src/Components/Pages/Home/Hero/Hero.module.css
@@ -1,6 +1,6 @@
 .heroContainer {
   width: 100%;
-  background-image: url(../../../../Images/hero.jpg);
+  background-image: url(../../../../images/hero.jpg);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
