--- a/src/Components/Footer/Footer.module.css
+++ b/src/Components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   background-color: rgb(42, 42, 42);
   width: 100%;
   padding-top: 7rem;
-  margin-top: 9rem;
+  /* margin-top: 9rem; */
 }
 
 .FooterWrapper {
