--- a/src/Components/Pages/Home/GetInTouch/GetInTouch.module.css
+++ b/src/Components/Pages/Home/GetInTouch/GetInTouch.module.css
@@ -1,68 +1,59 @@
 .GetInTouchContainer {
   margin-top: 7rem;
-  width: 100%;
+  /* width: 100%; */
+  width: 80%;
+  margin: 0 auto;
+  background-color: #1e1e1e;
+  align-items: center;
+  border-radius: 16px;
+  margin-bottom: 4rem;
+  padding-top: 7rem;
+  padding-bottom: 7rem;
 }
 
 .GetInTouchWrapper {
-  display: flex;
-  flex-direction: row;
-  width: 80%;
-  margin: 0 auto;
+  text-align: center;
+  align-items: center;
 }
 
 .GetInTouchWrapper h3 {
-  color: purple;
-  font-size: 1.7rem;
+  color: white;
   font-family: "Poppins", sans-serif;
-  font-size: 1.5rem;
-  font-weight: 400;
-}
-
-.GetInTouchWrapper .bold {
   font-size: 2rem;
-  font-family: "Poppins", sans-serif;
-  margin-top: 10px;
-  line-height: 20px;
-  letter-spacing: 1px;
   font-weight: bold;
 }
 
-.form {
-  width: 50%;
-  margin: 0 auto;
-  /* margin-top: 1rem; */
-}
-
-form {
-  display: flex;
-  flex-direction: column;
-}
-
-input,
-textarea {
-  margin-top: 10px;
-  padding: 15px 10px;
-}
-
-textarea {
-  padding: 30px 10px;
-}
-
-.button {
-  margin-top: 10px;
-  background-color: purple;
+.GetInTouchWrapper .bold {
+  font-size: 1.1rem;
+  font-family: "Poppins", sans-serif;
+  margin-top: 15px;
+  line-height: 20px;
+  letter-spacing: 1px;
+  /* font-weight: bold; */
   color: #fff;
+}
+
+.groupBtn {
+  background-color: rgb(186, 184, 184);
+  border: 1px solid purple;
   border: none;
-  padding: 13px 40px;
+  margin: 0 auto;
+  padding: 15px 35px;
+  color: #000;
+  margin-top: 30px;
   border-radius: 5px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
-  font-style: normal;
+  cursor: pointer;
   font-size: 1rem;
+  border: 1px solid rgb(42, 42, 42);
+  transition: background-color 0.3s ease;
+  cursor: pointer;
 }
 
-@media screen and (max-width: 1024px) {
-  .form {
-    width: 70%;
-  }
+.groupBtn:hover {
+  transition: background-color 0.5s ease;
+  border: 1px solid purple;
+  color: #fff;
+  background-color: purple;
 }
