--- a/src/Components/Pages/Home/Services/Services.module.css
+++ b/src/Components/Pages/Home/Services/Services.module.css
@@ -1,12 +1,12 @@
 .servicesContainer {
-  margin-top: 7rem;
+  margin-top: 5rem;
   width: 100%;
 }
 
 .serviceWrapper {
   width: 80%;
   margin: 0 auto;
-  text-align: center;
+  /* text-align: center; */
 }
 
 .serviceWrapper h3 {
@@ -14,6 +14,7 @@
   font-family: "Poppins", sans-serif;
   font-size: 1.5rem;
   font-weight: 400;
+  text-align: center;
 }
 
 .serviceBox {
@@ -26,10 +27,21 @@
 }
 
 .serviceBox .box {
-  background-color: #fff;
-  box-shadow: 20px 20px 24px rgb(12 12 12 / 8%);
+  background-color: rgb(240, 237, 240);
+  box-shadow: 20px 20px 24px rgba(148, 148, 148, 0.08);
   height: 100% !important;
+  border-radius: 10px;
   padding: 30px 15px 34px;
+  padding-left: 40px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.serviceBox .box:hover {
+  transform: scale(1.02);
+  filter: brightness(1.1);
+  border: 1px solid rgb(248, 210, 248);
+  transition: background-color 0.3s ease;
 }
 
 .icon {
@@ -41,7 +53,7 @@
   font-size: 1.3rem;
   color: purple;
   font-family: "Poppins", sans-serif;
-  font-weight: 500;
+  font-weight: 800;
   margin-top: 10px;
 }
 
