--- a/src/Components/Pages/Home/Who/Who.module.css
+++ b/src/Components/Pages/Home/Who/Who.module.css
@@ -1,9 +1,9 @@
 .whoContainer {
   width: 100%;
-  margin-top: 3rem;
-  background-color: rgb(244, 244, 244);
-  padding-top: 5rem;
-  padding-bottom: 5rem;
+  margin-top: 5rem;
+  background-color: rgb(42, 42, 42);
+  padding-top: 6rem;
+  padding-bottom: 6rem;
   align-items: center;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .whoText h3 {
-  color: purple;
+  color: white;
   font-family: "Poppins", sans-serif;
   font-size: 1.5rem;
   font-weight: 400;
@@ -31,6 +31,7 @@
 
 .whoText h1 {
   font-size: 2.2rem;
+  color: white;
   margin-top: 15px;
   font-family: "Poppins", sans-serif;
   font-weight: 800;
@@ -43,6 +44,7 @@
   margin-top: 10px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
+  color: rgb(185, 185, 185);
   font-style: normal;
 }
 
@@ -51,20 +53,28 @@
 }
 
 .whoBtn {
-  display: flex;
-  text-align: center;
-  align-items: center;
-  background-color: purple;
+  background-color: rgb(186, 184, 184);
+  border: 1px solid purple;
   border: none;
   margin: 0 auto;
   padding: 15px 35px;
-  color: #fff;
+  color: #000;
   margin-top: 30px;
   border-radius: 5px;
   font-family: "Poppins", sans-serif;
   font-weight: 400;
   cursor: pointer;
   font-size: 1rem;
+  border: 1px solid rgb(42, 42, 42);
+  transition: background-color 0.3s ease;
+  cursor: pointer;
+}
+
+.whoBtn:hover {
+  transition: background-color 0.5s ease;
+  border: 1px solid purple;
+  color: #fff;
+  background-color: purple;
 }
 
 .whoBtn a {
