--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -18,8 +18,22 @@
   justify-content: space-between;
   width: 80%;
   margin: 0 auto;
-  padding-top: 20px;
-  padding-bottom: 20px;
+  /* padding-top: 20px;
+  padding-bottom: 20px; */
+  align-items: center;
+}
+
+.logo {
+  display: flex;
+  align-items: center;
+  width: 80px; /* reduced from 100px for better fit */
+}
+
+.logo img {
+  width: 100%;
+  height: auto;
+  object-fit: contain;
+  display: block;
 }
 
 .headerWrapper a {
