--- a/src/Components/Pages/Team/TeamHero/TeamHero.module.css
+++ b/src/Components/Pages/Team/TeamHero/TeamHero.module.css
@@ -1,6 +1,6 @@
 .teamHeroContainer {
   width: 100%;
-  background-image: url(../../../../images/teamHero.jpg);
+  background-image: url(../../../../images/teambg.png);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
